<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtIcono"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/icono"
        android:gravity="center"
        android:text="@string/primeraletra"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRemitente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRemitente"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEmail"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAsunto"
            android:textSize="12sp" />


    </LinearLayout>


</LinearLayout>