<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:layout_width="match_parent">

    <TextView
        android:id="@+id/txtIcono"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/icono"
        android:gravity="center"
        android:text="@string/primeraletra"
        android:textSize="18sp"
        android:layout_marginTop="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="10sp"
        android:paddingLeft="10sp">

        <TextView
            android:id="@+id/textSecondRemitente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/textSecondRemitente"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSecondEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/textSecondEmail"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSecondAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/textSecondAsunto"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textSecondContenido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:text="@string/textSecondContenido" />
    </LinearLayout>

</LinearLayout>
